--- a/Web/index.html
+++ b/Web/index.html
@@ -25,9 +25,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/Web.data.br",
-        frameworkUrl: "Build/Web.framework.js.br",
-        codeUrl: "Build/Web.wasm.br",
+        dataUrl: "Build/Web.data",
+        frameworkUrl: "Build/Web.framework.js",
+        codeUrl: "Build/Web.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "KID",
         productName: "KID _ 血條與技能冷卻效果",
